updated the README file

--- a/README.me
+++ b/README.me
@@ -1,2 +1,14 @@
 hellow 
-i am wriyting icu\
+i am wriyting icu
+
+\\
+## development environment
+
+
+make sure you have js avialble;;;a
+
+
+
+
+
+
